<resources>
    <string name="app_name">VisitCard</string>
    <string name="label_visit_card">Cartão de Visita</string>
    <string name="label_description_new_card">Novo Cartão</string>
    <string name="label_name">Nome</string>
    <string name="til_phone">Telefone</string>
    <string name="til_mail">Mail</string>
    <string name="til_company">Empresa</string>
    <string name="til_color">Color</string>
    <string name="btn_submit">Confirmar</string>
    <string name="label_show_sucess">Cartão cadastrado com sucesso</string>
    <string name="label_share">Compartilhar</string>
</resources>